# hackathon

./: README.md
infra/: .gitignore  admin_site.tf  lambdas.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
infra/modules/lambda/: locals.tf  main.tf  outputs.tf  variables.tf
lambda/: force_build_comment.sh  lint_and_format.sh  pyproject.toml
lambda/functions/auth/: pyproject.toml
lambda/functions/auth/auth/: handler.py
lambda/functions/authorizer/: pyproject.toml
lambda/functions/authorizer/authorizer/: handler.py
lambda/functions/connections/: pyproject.toml
lambda/functions/connections/connections/: handler.py
lambda/functions/popcorn/: package.sh  pyproject.toml
lambda/functions/popcorn/popcorn/: handler.py
lambda/functions/search/: pyproject.toml
lambda/functions/search/search/: handler.py
lambda/functions/seat/: pyproject.toml
lambda/functions/seat/seat/: handler.py
lambda/functions/shared/: constants.py  db.py  models.py
lambda/functions/user/: pyproject.toml
lambda/functions/user/user/: handler.py
playground/: index.html  package-lock.json  package.json
playground/src/: index.css
playground/src/components/contexts/: UserContext.tsx
playground/src/components/root/: App.tsx  Main.tsx
playground/src/components/router/: Router.tsx
playground/src/lib/: firebase.ts
web-components/: index.html  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.js
web-components/src/: App.tsx  SignLoginMessage.tsx  axiosConfig.ts  main.tsx
(+8 files in other folders)
